--- a/docs/css/top.css
+++ b/docs/css/top.css
@@ -14,7 +14,7 @@ html {
 
 body {
   background-color: #171a26;
-  color: #fff; 
+  color: #fff;
   font-size: 1.0em;
 }
 
@@ -25,7 +25,7 @@ body {
 .bg {
   display: flex;
   position: fixed;
-  z-index: -1; 
+  z-index: -1;
   top: 0;
   right: 0;
   bottom: 0;
@@ -43,7 +43,7 @@ body {
   width: calc(100% / 8);
   height: 20vh;
   height: calc(100% / 8);
-  background-image: url(/img/top/img01.jpeg);
+  background-image: url(/docs/img/top/img01.jpeg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -52,7 +52,7 @@ body {
 
 .content {
   position: relative;
-  z-index: 10; 
+  z-index: 10;
   width: 100%;
 }
 
@@ -60,7 +60,7 @@ body {
   display: flex;
   position: relative;
   width: 100%;
-  height: 100%; 
+  height: 100%;
 
   justify-content: center;
   align-items: center;
@@ -75,7 +75,7 @@ body {
 }
 
 .content_title {
-  text-align: center; 
+  text-align: center;
   color: #252a3d;
   font-size: 6.0em;
   font-weight: 700;
@@ -84,14 +84,14 @@ body {
 
 .content_text {
   margin-top: 50px;
-  color: #252a3d; 
+  color: #252a3d;
   font-size: 2.0em;
   font-weight: 400;
   line-height: 1.6;
 }
 
 #fp-nav {
-  border-radius: 20px; 
+  border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.2);
 }
 #fp-nav ul li a span {
